
[TestExecuteShowsHelp - 1]
██╗  ██╗███████╗ █████╗ ██╗██╗
██║ ██╔╝██╔════╝██╔══██╗██║██║
█████╔╝ ███████╗███████║██║██║
██╔═██╗ ╚════██║██╔══██║██║██║
██║  ██╗███████║██║  ██║██║███████╗
╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝╚══════╝

CLI tool for operating Kubernetes

Usage:
  ksail [flags]
  ksail [command]

Available Commands:
  chat              Start an AI-assisted chat session
  cipher            Manage encrypted files with SOPS
  cluster           Manage cluster lifecycle
  completion        Generate the autocompletion script for the specified shell
  help              Help about any command
  mcp               Start an MCP server
  workload          Manage workload operations

Flags:
      --benchmark   Show per-activity benchmark output
  -h, --help        help for ksail
  -v, --version     version for ksail

Use "ksail [command] --help" for more information about a command.

---

[TestExecuteShowsHelpFlag - 1]
CLI tool for operating Kubernetes

Usage:
  ksail [flags]
  ksail [command]

Available Commands:
  chat              Start an AI-assisted chat session
  cipher            Manage encrypted files with SOPS
  cluster           Manage cluster lifecycle
  completion        Generate the autocompletion script for the specified shell
  help              Help about any command
  mcp               Start an MCP server
  workload          Manage workload operations

Flags:
      --benchmark   Show per-activity benchmark output
  -h, --help        help for ksail
  -v, --version     version for ksail

Use "ksail [command] --help" for more information about a command.

---

[TestExecuteShowsVersion - 1]
ksail version 1.2.3 (Built on 2025-08-17 from Git SHA abc123)

---

[TestExecuteWithNonexistentCommand - 1]
Error: unknown command "nonexistent" for "ksail"
Run 'ksail --help' for usage.

---
